force-app/main/default/objects/Car__c/fields/Comission__c.field-meta.xml
<CustomField>
    <fullName>Comission__c</fullName>
    <label>Comission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>