force-app/main/default/objects/Car__c/fields/Dismantled_Date__c.field-meta.xml
<CustomField>
    <fullName>Dismantled_Date__c</fullName>
    <label>Dismantled Date</label>
    <type>Date</type>
</CustomField>