force-app/main/default/objects/Car__c/fields/How_much_we_gain_lost__c.field-meta.xml
<CustomField>
    <fullName>How_much_we_gain_lost__c</fullName>
    <label>How much we gain/lost</label>
    <length>40</length>
    <type>Text</type>
</CustomField>