force-app/main/default/objects/Car__c/fields/Is_Dismantled__c.field-meta.xml
<CustomField>
    <fullName>Is_Dismantled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dismantled</label>
    <type>Checkbox</type>
</CustomField>