force-app/main/default/objects/Car__c/fields/Is_Drivable__c.field-meta.xml
<CustomField>
    <fullName>Is_Drivable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Drivable</label>
    <type>Checkbox</type>
</CustomField>