force-app/main/default/objects/Car__c/fields/Is_Picked_Up__c.field-meta.xml
<CustomField>
    <fullName>Is_Picked_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Picked Up</label>
    <type>Checkbox</type>
</CustomField>