force-app/main/default/objects/Car__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cars (Master)</relationshipLabel>
    <relationshipName>Cars1</relationshipName>
    <type>Lookup</type>
</CustomField>