force-app/main/default/objects/Car__c/fields/Penalty_Cost__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Cost__c</fullName>
    <label>Penalty Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>