force-app/main/default/objects/Car__c/fields/Vin_Code__c.field-meta.xml
<CustomField>
    <fullName>Vin_Code__c</fullName>
    <label>Vin Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>